--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class="sidebar">
+            <div class="logo">
+                <a href="https://www.theodinproject.com/">
+                    <img src="assets/logo.png" alt="The Odin Project logo">
+                    <h1>Odin</h1>
+                </a>
+            </div>
+        </div>
+        <div class="content">
+            <p>This is not a real online service! You know you need something
+                like this in your life to help you realize your deepest dreams.
+                Sign up <em>now</em> to get started.</p>
+            <p>You <em>know</em> you want to.</p>
+            <form>
+            </form>
+            <p>Already have an account? <a href="">Log in</a></p>
+        </div>
     </body>
 </html>
