Create basic form layout

--- a/index.html
+++ b/index.html
@@ -20,8 +20,38 @@
                 like this in your life to help you realize your deepest dreams.
                 Sign up <em>now</em> to get started.</p>
             <p>You <em>know</em> you want to.</p>
+
             <form>
+                <div class="signup-info">
+                    <p>Let's do this!</p>
+
+                    <div class="form-row">
+                        <label for="first-name">First Name</label>
+                        <input type="text" name="first-name" id="first-name">
+    
+                        <label for="last-name">Last Name</label>
+                        <input type="text" name="last-name" id="last-name">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email">
+
+                        <label for="phone-number">Phone Number</label>
+                        <input type="tel" name="phone-number" id="phone-number">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password">
+
+                        <label for="confirm-password">Confirm Password</label>
+                        <input type="password" name="confirm-password" id="confirm-password">
+                    </div>
+                </div>
+                <button>Create Account</button>
             </form>
+
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
     </body>
