--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         <div class="sidebar">
             <div class="logo">
                 <a href="https://www.theodinproject.com/">
-                    <img src="assets/logo.png" alt="The Odin Project logo">
+                    <img src="./assets/logo.png" alt="The Odin Project logo">
                     <h1>Odin</h1>
                 </a>
             </div>
+            <p>Photo by <a href="https://unsplash.com/@pawel_czerwinski?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Pawel Czerwinski</a> on <a href="https://unsplash.com/photos/red-and-blue-wallpaper-6lQDFGOB1iw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
         </div>
         <div class="content">
             <p>This is not a real online service! You know you need something
