Add style for invalid passwords and style body

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                             <input type="email" name="email" id="email">
 
                             <label for="password">Password</label>
-                            <input type="password" name="password" id="password">
+                            <input type="password" name="password" id="password" minlength="8">
+                            <span></span>
                         </div>
                         
                         <div class="form-column">
@@ -45,7 +46,8 @@
                             <input type="tel" name="phone-number" id="phone-number">
 
                             <label for="confirm-password">Confirm Password</label>
-                            <input type="password" name="confirm-password" id="confirm-password">
+                            <input type="password" name="confirm-password" id="confirm-password" minlength="8">
+                            <span></span>
                         </div>
                     </div>
                 </div>
